--- a/thesis.bib
+++ b/thesis.bib
@@ -35,6 +35,14 @@
   organization = {Stanford NLP}
 }
 
+@online{2025Traceability,
+  title = {Traceability},
+  date = {2025-06-18},
+  url = {https://dictionary.cambridge.org/dictionary/english/traceability},
+  urldate = {2025-06-18},
+  langid = {english}
+}
+
 @inproceedings{audibert2010BestArm,
   title = {Best {{Arm Identification}} in {{Multi-Armed Bandits}}},
   author = {Audibert, Jean-Yves and Bubeck, Sébastien},
